crates/vize_patina/src/rules/script/snapshots/vize_patina__rules__script__no_options_api__tests__invalid_destructured_create_app_options.snap
---
source: crates/vize_patina/src/rules/script/no_options_api.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/no-options-api",
        severity: Error,
        message: "Options API component declarations are not supported",
        start: 43,
        end: 82,
        help: Some(
            "Use <script setup> with Composition API. Move props/emits to defineProps()/defineEmits(), lifecycle options to onMounted()/onUnmounted(), and component metadata to defineOptions() when needed.",
        ),
        labels: [
            Label {
                message: "methods option (use plain functions)",
                start: 47,
                end: 54,
            },
        ],
        fix: None,
    },
]
